updated website with proper image and fixed spacing for About section

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@ h6 {
 h1 {
   font-size: 3.2rem;
   margin-bottom: 0.7rem;
+  font-weight: bolder;
 }
 
 h2 {
